# ChangeLog for games-board/kcheckers
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-board/kcheckers/ChangeLog,v 1.4 2005/07/01 15:02:50 caleb Exp $

  01 Jul 2005; Caleb Tennis <caleb@gentoo.org> kcheckers-0.5.ebuild:
  Fix qmake dir per bug #97535

  10 Jun 2005; David Holm <dholm@gentoo.org> kcheckers-0.5.ebuild:
  Added to ~ppc.

  07 Dec 2004; Michael Sterrett <mr_bones_@gentoo.org> kcheckers-0.5.ebuild:
  fix sandbox (bug #73744)

*kcheckers-0.5 (07 Dec 2004)

  07 Dec 2004; Michael Sterrett <mr_bones_@gentoo.org> +metadata.xml,
  +kcheckers-0.5.ebuild:
  initial commit - ebuild submitted by Greg Watson via bug #69184
